--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -1,218 +1,182 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Kindertreff – Spielverabredungen ohne Stress</title>
+  <meta charset="UTF-8">
+  <title>Kindertreff – Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-:root{
-  --bg:#f6f7f8; --surface:#fff; --text-main:#1f2933;
-  --text-muted:#6b7280; --accent:#4f6ef7;
-  --border:#e5e7eb; --radius:14px;
-}
-body{
-  margin:0;font-family:system-ui,sans-serif;
-  background:radial-gradient(1200px 600px at 50% -200px,rgba(79,110,247,0.06),transparent 70%),var(--bg);
-}
-header{background:var(--surface);border-bottom:1px solid var(--border);padding:1.25rem;text-align:center;}
-main{max-width:760px;margin:auto;padding:1.5rem 1rem 4rem;}
-h2{font-size:1rem;margin-bottom:.75rem;}
-.card{background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);padding:1rem;}
-form{display:grid;gap:.75rem;}
-label{font-size:.75rem;color:var(--text-muted);}
-input,select,button{padding:.6rem;border-radius:10px;border:1px solid var(--border);}
-.time-grid{display:grid;grid-template-columns:1fr 1fr;gap:.75rem;}
-button{background:var(--accent);color:white;border:none;cursor:pointer;}
-button.secondary{background:transparent;color:var(--text-muted);border:1px solid var(--border);font-size:.8rem;}
-#week{display:grid;grid-template-columns:repeat(7,1fr);gap:1rem;margin-top:1rem;}
-@media(max-width:900px){#week{grid-template-columns:repeat(2,1fr);}}
-@media(max-width:600px){#week{grid-template-columns:1fr;}}
-.day{background:var(--surface);border:1px solid var(--border);border-radius:12px;padding:1rem;}
-.entry{border:1px solid var(--border);border-radius:10px;padding:.5rem;margin-bottom:.5rem;background:#fafafa;}
-.entry.expired{opacity:.45;text-decoration:line-through;}
-footer{text-align:center;font-size:.8rem;color:var(--text-muted);padding:2rem 1rem;}
-</style>
+  <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
+
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      max-width: 600px;
+      margin: auto;
+      padding: 1rem;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    form {
+      display: grid;
+      gap: 0.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    input, button {
+      padding: 0.6rem;
+      font-size: 1rem;
+    }
+
+    button {
+      cursor: pointer;
+    }
+
+    .entry {
+      padding: 0.6rem;
+      margin-bottom: 0.5rem;
+      border-radius: 6px;
+      background: #f1f1f1;
+    }
+
+    .entry.mine {
+      background: #e0f4e6;
+      border-left: 4px solid #3ba55d;
+    }
+
+    .actions button {
+      margin-right: 0.3rem;
+    }
+  </style>
 </head>
 
 <body>
 
-<header><h1>Kindertreff</h1></header>
+<h1>Kindertreff</h1>
 
-<p class="hint">
-  Trage hier Termine für den Kindertreff ein.
-  Jeder kann seinen eigenen Eintrag später bearbeiten oder löschen.
-  Abgelaufene Termine werden automatisch entfernt.
+<p>
+  Trage ein, wann dein Kind Zeit zum Spielen hat.  
+  Dein Eintrag ist für alle sichtbar, aber <strong>nur du</strong> kannst ihn bearbeiten oder löschen.
 </p>
 
-
-<main>
-<section>
-<h2>Neue Verfügbarkeit</h2>
-<div class="card">
 <form id="entryForm">
+  <input id="alias" type="text" placeholder="Dein Name oder Alias" required>
 
-<input type="text" id="name" placeholder="Name des Kindes" required />
+  <input id="date" type="date">
 
-<select id="group">
-<option>Kindi</option><option>Turnen</option><option>Musik</option><option>Sonstiges</option>
-</select>
+  <label>Startzeit</label>
+  <input id="startTime" type="time" required>
 
-<label>Datum</label>
-<input
-  type="date"
-  id="date"
-  placeholder="YYYY-MM-DD"
-  onfocus="this.showPicker && this.showPicker()"
-/>
+  <label>Endzeit</label>
+  <input id="endTime" type="time" required>
 
-
-<div class="time-grid">
-<div>
-<label for="startTime"><strong>Startzeit</strong></label>
-<input type="time" id="startTime" />
-
-<label for="endTime"><strong>Endzeit</strong></label>
-<input type="time" id="endTime" />
-
-</div>
-</div>
-
-<input id="note" placeholder="Ort / Hinweis (optional)" />
-<button type="submit">Eintragen</button>
-
+  <button type="submit">Eintragen</button>
 </form>
-</div>
-</section>
 
-<section>
-<h2>Diese Woche</h2>
-<div id="week"></div>
-</section>
-</main>
+<div id="entries"></div>
 
-<footer>Daten bleiben lokal im Browser.</footer>
-
-<script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
+  // 🔌 PocketBase verbinden
+  const pb = new PocketBase("/api");
 
-const pb=new PocketBase("/api");
+  const form = document.getElementById("entryForm");
+  const entriesDiv = document.getElementById("entries");
 
-/* lokaler Nutzer */
-let userId=localStorage.getItem("kindertreffUser");
-if(!userId){
-  userId=crypto.randomUUID();
-  localStorage.setItem("kindertreffUser",userId);
-}
+  let editId = null;
 
-/* Name */
-const nameInput = document.getElementById("name");
+  // 📥 Eintrag speichern / aktualisieren
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
 
-if (!nameInput || !nameInput.value.trim()) {
-  alert("Bitte einen Namen eingeben");
-  return;
-}
+    const alias = document.getElementById("alias").value.trim();
+    const date = document.getElementById("date").value;
+    const start = document.getElementById("startTime").value;
+    const end = document.getElementById("endTime").value;
 
-const name = nameInput.value.trim();
+    if (!alias || !date || !start || !end) {
+      alert("Bitte alle Felder ausfüllen");
+      return;
+    }
 
+    localStorage.setItem("kindertreff_alias", alias);
 
-/* Datum normalisieren */
-function normalizeDate(v){
-  if(!v) return null;
-  if(/^\d{4}-\d{2}-\d{2}$/.test(v)) return v;
-  const p=v.split(".");
-  if(p.length===3) return `${p[2]}-${p[1].padStart(2,"0")}-${p[0].padStart(2,"0")}`;
-  return null;
-}
+    const data = { alias, date, start, end };
 
-/* Kalender nur bei Klick */
-const dateInput=document.getElementById("date");
-dateInput.addEventListener("focus",()=>{
-  dateInput.type="date";
-});
-dateInput.addEventListener("blur",()=>{
-  if(!dateInput.value) dateInput.type="text";
-});
+    try {
+      if (editId) {
+        await pb.collection("entries").update(editId, data);
+        editId = null;
+        form.querySelector("button").textContent = "Eintragen";
+      } else {
+        await pb.collection("entries").create(data);
+      }
 
-/* Woche aufbauen */
-const week=document.getElementById("week");
-const today=new Date();today.setHours(0,0,0,0);
-const days={};
-
-for(let i=0;i<7;i++){
-  const d=new Date(today);d.setDate(today.getDate()+i);
-  const key=d.toISOString().split("T")[0];
-  const el=document.createElement("div");
-  el.className="day";
-  el.innerHTML=`<h3>${i===0?"Heute":i===1?"Morgen":d.toLocaleDateString("de-DE",{weekday:"short",day:"numeric",month:"numeric"})}</h3><small>Keine Einträge</small>`;
-  week.appendChild(el);
-  days[key]=el;
-}
-
-/* Laden */
-async function load(){
-  Object.values(days).forEach(d=>{
-    d.querySelectorAll(".entry").forEach(e=>e.remove());
-    if(!d.querySelector("small")) d.insertAdjacentHTML("beforeend","<small>Keine Einträge</small>");
+      form.reset();
+      loadEntries();
+    } catch (err) {
+      console.error(err);
+      alert("Fehler beim Speichern");
+    }
   });
 
-  let entries=[];
-  try{
-    entries=await pb.collection("entries").getFullList({sort:"date,start"});
-  }catch{return;}
+  // 📋 Einträge laden
+  async function loadEntries() {
+    entriesDiv.innerHTML = "";
 
-  entries.forEach(e=>{
-    const day=days[e.date];
-    if(!day) return;
-    day.querySelector("small")?.remove();
+    const myAlias = localStorage.getItem("kindertreff_alias");
 
-    const div=document.createElement("div");
-    div.className="entry";
-    div.innerHTML=`<strong>${e.name}</strong><br>${e.start}–${e.end}<br>
-    <small>${e.group}${e.note?" · "+e.note:""}</small>
-    ${e.localUserId===userId?`<br><button class="secondary" data-id="${e.id}">Löschen</button>`:""}`;
+    const records = await pb.collection("entries").getFullList({
+      sort: "+date,+start"
+    });
 
-    day.appendChild(div);
-  });
+    records.forEach(entry => {
+      const div = document.createElement("div");
+      div.className = "entry";
 
-  document.querySelectorAll("button[data-id]").forEach(b=>{
-    b.onclick=async()=>{
-      await pb.collection("entries").delete(b.dataset.id);
-      load();
-    };
-  });
-}
+      if (entry.alias === myAlias) {
+        div.classList.add("mine");
+      }
 
-/* Formular */
-document.getElementById("entryForm").addEventListener("submit",async e=>{
-  e.preventDefault();
+      div.innerHTML = `
+        <strong>${entry.alias}</strong><br>
+        ${entry.date} | ${entry.start} – ${entry.end}
+        ${entry.alias === myAlias ? `
+          <div class="actions">
+            <button onclick="editEntry('${entry.id}')">✏️</button>
+            <button onclick="deleteEntry('${entry.id}')">🗑️</button>
+          </div>
+        ` : ""}
+      `;
 
-  const alias=name.value.trim();
-  const date=normalizeDate(dateInput.value);
-
-  if(!alias || !date){
-    alert("Bitte Name und Datum angeben.");
-    return;
+      entriesDiv.appendChild(div);
+    });
   }
 
-  await pb.collection("entries").create({
-    name:alias,
-    group:group.value,
-    date,
-    start:start.value,
-    end:end.value,
-    note:note.value,
-    localUserId:userId
-  });
+  // ✏️ Bearbeiten
+  async function editEntry(id) {
+    const entry = await pb.collection("entries").getOne(id);
 
-  e.target.reset();
-  dateInput.type="text";
-  load();
-});
+    document.getElementById("alias").value = entry.alias;
+    document.getElementById("date").value = entry.date;
+    document.getElementById("startTime").value = entry.start;
+    document.getElementById("endTime").value = entry.end;
 
-load();
-});
+    editId = id;
+    form.querySelector("button").textContent = "Änderung speichern";
+  }
+
+  // 🗑️ Löschen
+  async function deleteEntry(id) {
+    if (!confirm("Willst du deinen Eintrag wirklich löschen?")) return;
+
+    await pb.collection("entries").delete(id);
+    loadEntries();
+  }
+
+  // 🚀 Initial laden
+  loadEntries();
 </script>
 
 </body>
